# Copied from: https://github.com/pypa/sampleproject/blob/main/pyproject.toml

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pololu-maestro"
version = "0.0.1"
description = "Python driver for the Pololu Maestro series of servo controllers."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "Austin Bowen", email = "austin.bowen.314@gmail.com" },
    # Authors of the repo that this was cloned from: https://github.com/FRC4564/Maestro/
    { name = "Steven Jacobs", email = "FRC4564@github.com" },
    { name = "Paul Grayson", email = "pdg137@github.com" },
]
maintainers = [
    { name = "Austin Bowen", email = "austin.bowen.314@gmail.com" },
]

# For a list of valid classifiers, see https://pypi.org/classifiers/
classifiers = [
  "License :: OSI Approved :: MIT License",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = ["pyserial"]

# Optional dependencies the project provides. These are commonly
# referred to as "extras". For a more extensive definition see:
# https://packaging.python.org/en/latest/specifications/dependency-specifiers/#extras
#[project.optional-dependencies]
#dev = []
#test = []

[project.urls]
"Homepage" = "https://github.com/austin-bowen/pololu-maestro"
"Bug Reports" = "https://github.com/austin-bowen/pololu-maestro/issues"
"Source" = "https://github.com/austin-bowen/pololu-maestro"
